appId: com.example.firebaseauth101
name: select Dash on main screen
---
- assertNotVisible: "Welcome !"
- tapOn: "Say hello to Dash..."
- assertVisible: "Welcome !"

